# omnimatrix

./: Cargo.toml  README.md  TODO.md  default.nix  deny.toml  flake.nix
.cargo/: config.toml
crates/videohub/: Cargo.toml  README.md
crates/videohub/src/: bmd_cleanswitch_12x12.txt  bmd_example.txt  codec.rs  helpers.rs  lib.rs  model.rs  parser.rs  writer.rs
src/: lib.rs  main.rs
src/backend/: mod.rs  ndi.rs  videohub.rs
src/frontend/: mod.rs  videohub.rs
src/matrix/: dummy.rs  interface.rs  mod.rs  model.rs
