[workspace]
members = [
	"crates/videohub"
]

[package]
name = "omnimatrix"
version = "0.1.0"
authors = ["Adrian 'vifino' Pistol <vifino@posteo.net>"]
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = { version = "0.3.31", features = ["sink"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "time", "macros"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
videohub = { version = "0.1.0", path = "crates/videohub" }
