[package]
name = "videohub"
version = "1.0.1"
authors = ["Adrian 'vifino' Pistol <vifino@posteo.net>"]
description = "Blackmagic Videohub Control Protocol Codec"
repository = "https://github.com/vifino/omnimatrix/"
homepage = "https://github.com/vifino/omnimatrix/tree/main/crates/videohub"
license = "MIT"
edition = "2021"

[features]
codec = ["tokio-util"]
default = ["codec"]

[dependencies]
anyhow = { version = "1.0.75" }
bytes = "1.5"
nom = "7"
tokio-util = { version = "0.7.15", features = ["codec"], optional = true }
version-compare = "0.2.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
